Harden WebSocket bridge for Android 28 and fragmented replies